--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -154,21 +154,21 @@ nav:
     - projects/index.md
   - Blog:
     - blog/latest-posts.md
-    - 2021:
-      - blog/2021/bap-numpyro.md
-      - blog/2021/paying-attention.md
+    # - 2021:
+    #   - blog/2021/bap-numpyro.md
+    #   - blog/2021/paying-attention.md
     - 2020:
       - blog/2020/awesome-blogs.md
-      - blog/2020/datum-2005.md
-      - blog/2020/deluge-of-data.md
+      # - blog/2020/datum-2005.md
+      # - blog/2020/deluge-of-data.md
       - blog/2020/public-private-repos.md
       - blog/2020/pyspark-by-example.md
-      - blog/2020/rabbit-hole.md
+      # - blog/2020/rabbit-hole.md
       - blog/2020/sbt-native-packaging.md
       - blog/2020/scala-python-jvm.md
     - 2017:
       - blog/2017/bufdo.md
     - 2016:
       - blog/2016/matlab-r-julia-notebooks.md
-    - templates:
-      - blog/templates/template.md
+    # - templates:
+    #   - blog/templates/template.md
