Remove jaxlib from requirements
ERROR: Could not find a version that satisfies the requirement jaxlib>=0.1.65 (from versions: none)
ERROR: No matching distribution found for jaxlib>=0.1.65
	modified:   requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 arviz
 funsor
-jaxlib>=0.1.65
 jupyter
 matplotlib
 mkdocs-bibtex
@@ -8,6 +7,6 @@ mkdocs-jupyter
 mkdocs-minify-plugin
 mkdocs-redirects
 numpy
-numpyro
+numpyro==0.8.0
 pandas
 seaborn
