--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "mkdocs-material"]
 	path = mkdocs-material
-	url = git@github.com:tallamjr/mkdocs-material.git
+	url = https://github.com/tallamjr/mkdocs-material.git
