Resolve issue of no overrides folder found
    raise TemplateNotFound(template)
jinja2.exceptions.TemplateNotFound: overrides/main.html

	modified:   docs/projects/index.md
	modified:   mkdocs.yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,7 +16,7 @@ copyright: Copyright &copy; 2021 - 2022 Tarek Allam Jr.
 # Configuration
 theme:
   name: material
-  custom_dir: material/overrides
+  custom_dir: material
   features:
     - navigation.tabs
 
