[WIP] New layout for projects page
	modified:   mkdocs.yml
	renamed:    src/projects/index/contributions-dark.png -> src/projects/assets/contributions-dark.png
	renamed:    src/projects/index/contributions-light-blue-green.png -> src/projects/assets/contributions-light-blue-green.png
	renamed:    src/projects/index/contributions-light.png -> src/projects/assets/contributions-light.png
	renamed:    src/projects/index/logo_transparent.png -> src/projects/assets/logo_transparent.png
	renamed:    src/projects/index/logo_transparent_resize.png -> src/projects/assets/logo_transparent_resize.png
	renamed:    src/projects/index/option3.png -> src/projects/assets/option3.png
	renamed:    src/projects/index/simurgh-wiki.jpg -> src/projects/assets/simurgh-wiki.jpg
	new file:   src/projects/mle/mle-projects.md
	new file:   src/projects/online-books/online-books.md
	renamed:    src/projects/index.md -> src/projects/recent-projects.md

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -150,10 +150,17 @@ extra_javascript:
 # Page tree
 nav:
   - About Me: index.md
+
   - Research:
     - research/index.md
+
   - Projects:
-    - projects/index.md
+    - projects/recent-projects.md
+    - ML Engineering:
+      - projects/mle/mle-projects.md
+    - Online Books:
+      - projects/online-books/online-books.md
+
   - Blog:
     - blog/latest-posts.md
     # - 2021:
