--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -156,9 +156,13 @@ nav:
     - projects/index.md
   - Blog:
     - blog/latest-posts.md
-    # - 2021:
+    # - 2022:
+    #   - blog/2022/learning-programming.md
+    - 2021:
+      - blog/2021/xception.md
     #   - blog/2021/bap-numpyro.md
     #   - blog/2021/paying-attention.md
+    #   - blog/2021/time-series-transformer.md
     - 2020:
       - blog/2020/pyspark-by-example.md
       - blog/2020/scala-python-jvm.md
