--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-arviz==0.11.4
-causalgraphicalmodels==0.0.4
-daft==0.1.2
-jupyter==1.0.0
+arviz>=0.11.4
+causalgraphicalmodels>=0.0.4
+daft>=0.1.2
+jupyter>=1.0.0
 matplotlib
 mkdocs-bibtex
 mkdocs-jupyter
@@ -9,4 +9,4 @@ mkdocs-minify-plugin
 mkdocs-redirects
 numpy
 pandas
-seaborn==0.11.2
+seaborn>=0.11.2
