Change main font: Armino --> Poppins
	modified:   mkdocs.yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -62,7 +62,7 @@ theme:
         icon: material/toggle-switch-off-outline
         name: Switch to dark mode
   font:
-    text: Arimo
+    text: Poppins
     code: Roboto Mono
   favicon: assets/images/rocket-icon.png
   logo: assets/images/profile-crop.png
@@ -156,13 +156,13 @@ nav:
     - projects/index.md
   - Blog:
     - blog/latest-posts.md
-    # - 2022:
-    #   - blog/2022/learning-programming.md
+    - 2022:
+      - blog/2022/learning-programming.md
     - 2021:
       - blog/2021/xception.md
-    #   - blog/2021/bap-numpyro.md
-    #   - blog/2021/paying-attention.md
-    #   - blog/2021/time-series-transformer.md
+      - blog/2021/bap-numpyro.md
+      - blog/2021/paying-attention.md
+      - blog/2021/time-series-transformer.md
     - 2020:
       - blog/2020/pyspark-by-example.md
       - blog/2020/scala-python-jvm.md
