--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,7 +18,7 @@ copyright: Copyright &copy; 2021 - 2022 Tarek Allam Jr.
 # Configuration
 theme:
   name: material
-  custom_dir: material
+  custom_dir: material/.overrides/
   features:
     - navigation.tabs
 
