Use references and include new format cv
	new file:   bin/sage-harvard.csl
	modified:   mkdocs.yml
	modified:   src/assets/tarekallam-cv.pdf
	new file:   src/blog/2021/time-series-transformer.md

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -81,7 +81,8 @@ plugins:
   - bibtex:
       bib_file: "refs.bib"
       cite_inline: true
-      csl_file: "https://raw.githubusercontent.com/citation-style-language/styles/master/sage-harvard.csl"
+      csl_file: "bin/sage-harvard.csl"
+      # csl_file: "https://raw.githubusercontent.com/citation-style-language/styles/master/sage-harvard.csl"
       # cite_style: "pandoc"
 
 # Customization
