--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
           GOOGLE_ANALYTICS_KEY: ${{ secrets.GOOGLE_ANALYTICS_KEY }}
         run: |
           sudo apt-get update
-          sudo apt-get install pandoc
+          sudo apt-get install pandoc=2.19.2
           sudo apt-get install pandoc-citeproc
           pip install -U pip
           pip install -r requirements.txt
