--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,14 +10,26 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
+          python-version: 3.11
+
+      - uses: conda-incubator/setup-miniconda@v1
+        with:
+          activate-environment: web
+          environment-file: environment.yml
           python-version: 3.x
+          auto-activate-base: false
+
+      - shell: bash -l {0}
+        run: |
+          conda info
+          conda list
+
       - name: Deploy documentation
         env:
           GOOGLE_ANALYTICS_KEY: ${{ secrets.GOOGLE_ANALYTICS_KEY }}
         run: |
-          sudo apt-get update
-          sudo apt-get install pandoc=2.19.2
-          sudo apt-get install pandoc-citeproc
+          conda env update --file ${{ github.workspace }}/environment.yml
+          PATH="/usr/share/miniconda/envs/web/bin:$PATH"
           pip install -U pip
           pip install -r requirements.txt
           pip install mkdocs-material
