--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,4 +32,4 @@ jobs:
           pip install -U pip
           pip install -r requirements.txt
           pip install mkdocs-material
-          mkdocs gh-deploy --force
+          mkdocs gh-deploy --config-file ${{ github.workspace }}/mkdocs.yml --remote-branch master --force
