--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,13 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: true
+
+      - shell: bash -l {0}
+        run: |
+          pwd
+          ls -la ${{ github.workspace }}/mkdocs-material
+          mv ${{ github.workspace }}/mkdocs-material/material ${{ github.workspace }}
+
       - uses: actions/setup-python@v2
         with:
           python-version: 3.11
@@ -34,4 +41,5 @@ jobs:
           pip install -U pip
           pip install -r requirements.txt
           pip install mkdocs-material
+          pwd
           mkdocs gh-deploy --config-file ${{ github.workspace }}/mkdocs.yml --force
