--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ jobs:
       - shell: bash -l {0}
         run: |
           pwd
+          ls -la ${{ github.workspace }}/material
           ls -la ${{ github.workspace }}/mkdocs-material
           mv ${{ github.workspace }}/mkdocs-material/material ${{ github.workspace }}
 
