--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -72,10 +72,10 @@ plugins:
   - search
   - redirects:
       redirect_maps:
-        changelog/insiders.md: insiders/changelog.md
-        upgrading.md: upgrade.md
+        # changelog/insiders.md: insiders/changelog.md
+        # upgrading.md: upgrade.md
         reference/variables.md: https://mkdocs-macros-plugin.readthedocs.io/
-        sponsorship.md: insiders/index.md
+        # sponsorship.md: insiders/index.md
   - minify:
       minify_html: true
   - bibtex:
@@ -161,14 +161,12 @@ nav:
     - blog/latest-posts.md
     # - 2023:
     #   - blog/2023/einstein-blunder.md
-    # - 2022:
     #   - blog/2022/big-telescope-tinyml.md
-      # - blog/2022/learning-programming.md
-    # - 2021:
+    - 2021:
       # - blog/2021/xception.md
       # - blog/2021/bap-numpyro.md
       # - blog/2021/paying-attention.md
-      # - blog/2021/time-series-transformer.md
+      - blog/2021/time-series-transformer.md
     - 2020:
       - blog/2020/pyspark-by-example.md
       - blog/2020/scala-python-jvm.md
@@ -182,5 +180,5 @@ nav:
       - blog/2017/bufdo.md
     - 2016:
       - blog/2016/matlab-r-julia-notebooks.md
-    # - templates:
-    #   - blog/templates/template.md
+    - templates:
+      - blog/templates/template.md
