Remove template from nav list
	modified:   mkdocs.yml
	modified:   src/index.md

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -162,11 +162,11 @@ nav:
     # - 2023:
     #   - blog/2023/einstein-blunder.md
     #   - blog/2022/big-telescope-tinyml.md
-    - 2021:
+    # - 2021:
       # - blog/2021/xception.md
       # - blog/2021/bap-numpyro.md
       # - blog/2021/paying-attention.md
-      - blog/2021/time-series-transformer.md
+      # - blog/2021/time-series-transformer.md
     - 2020:
       - blog/2020/pyspark-by-example.md
       - blog/2020/scala-python-jvm.md
@@ -180,5 +180,5 @@ nav:
       - blog/2017/bufdo.md
     - 2016:
       - blog/2016/matlab-r-julia-notebooks.md
-    - templates:
-      - blog/templates/template.md
+    # - templates:
+    #   - blog/templates/template.md
