--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,8 +7,8 @@ site_description: >-
   Create a branded static site from a set of Markdown files to host the
   documentation of your Open Source or commercial project
 # Repository
-# repo_name: tallamjr.github.io
-# repo_url: https://github.com/tallamjr
+repo_name: tallamjr.github.io
+repo_url: https://github.com/tallamjr
 # edit_uri: ""
 docs_dir: "src"
 
@@ -19,19 +19,6 @@ copyright: Copyright &copy; 2021 - 2023 Tarek Allam Jr.
 theme:
   name: material
   custom_dir: material/.overrides
-  features:
-    - navigation.tabs
-
-  # Static files
-  static_templates:
-    - 404.html
-
-  # Don't include MkDocs' JavaScript
-  include_search_page: false
-  search_index_only: true
-
-  # Default values, taken from mkdocs_theme.yml
-  language: en
   features:
     - content.code.annotate
     - content.tabs.link
@@ -48,6 +35,14 @@ theme:
     - search.share
     - search.suggest
     # - toc.integrate
+  # Static files
+  static_templates:
+    - 404.html
+  # Don't include MkDocs' JavaScript
+  include_search_page: false
+  search_index_only: true
+  # Default values, taken from mkdocs_theme.yml
+  language: en
   palette:
     - scheme: slate
       primary: black
@@ -70,11 +65,11 @@ theme:
 # Plugins
 plugins:
   - search
-  - redirects:
-      redirect_maps:
+  # - redirects:
+  #     redirect_maps:
         # changelog/insiders.md: insiders/changelog.md
         # upgrading.md: upgrade.md
-        reference/variables.md: https://mkdocs-macros-plugin.readthedocs.io/
+        # reference/variables.md: https://mkdocs-macros-plugin.readthedocs.io/
         # sponsorship.md: insiders/index.md
   - minify:
       minify_html: true
@@ -139,7 +134,6 @@ markdown_extensions:
       custom_checkbox: true
   - pymdownx.tilde
 
-
 extra_css:
   - stylesheets/extra.css
 
@@ -166,7 +160,7 @@ nav:
       # - blog/2021/bap-numpyro.md
       # - blog/2021/paying-attention.md
       # - blog/2021/time-series-transformer.md
-    - Deep Generative Modelling:
+    - 2020:
       - blog/2020/pyspark-by-example.md
       - blog/2020/scala-python-jvm.md
       - blog/2020/public-private-repos.md
