--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -147,6 +147,8 @@ nav:
     - research/index.md
   - Projects:
     - projects/index.md
+  - Wiki:
+    - wiki/index.md
   - Blog:
     - blog/index.md
     # - blog/latest-posts.md
