--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -149,29 +149,9 @@ nav:
     - projects/index.md
   - Wiki:
     - wiki/index.md
+    # - wiki/embedded-systems.md
+    # - wiki/compilers.md
+    # - wiki/model-compression.md
+    # - wiki/data-compression.md
   - Blog:
     - blog/index.md
-    # - blog/latest-posts.md
-    # - 2023:
-    #   - blog/2023/einstein-blunder.md
-    #   - blog/2022/big-telescope-tinyml.md
-    # - 2021:
-    #   - blog/2021/xception.md
-    #   - blog/2021/bap-numpyro.md
-    #   - blog/2021/paying-attention.md
-    #   - blog/2021/time-series-transformer.md
-    # - 2020:
-    #   - blog/2020/pyspark-by-example.md
-    #   - blog/2020/scala-python-jvm.md
-    #   - blog/2020/public-private-repos.md
-    #   - blog/2020/sbt-native-packaging.md
-    #   - blog/2020/awesome-blogs.md
-    #   - blog/2020/datum-2005.md
-    #   - blog/2020/deluge-of-data.md
-    #   - blog/2020/rabbit-hole.md
-    # - 2017:
-    #   - blog/2017/bufdo.md
-    # - 2016:
-    #   - blog/2016/matlab-r-julia-notebooks.md
-    # - templates:
-    #   - blog/templates/template.md
