--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -100,7 +100,6 @@ markdown_extensions:
   - abbr
   - admonition
   - attr_list
-  - codehilite
   - def_list
   - footnotes
   - md_in_html
@@ -118,7 +117,10 @@ markdown_extensions:
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
       emoji_generator: !!python/name:material.extensions.emoji.to_svg
-  - pymdownx.highlight
+  - pymdownx.highlight:
+      use_pygments: true
+      noclasses: true
+      pygments_style: "lightbulb"
   - pymdownx.inlinehilite
   - pymdownx.keys
   - pymdownx.mark
@@ -126,7 +128,7 @@ markdown_extensions:
   - pymdownx.superfences:
       custom_fences:
         - name: mermaid
-          class: mermaid-experimental
+          class: mermaid
           format: !!python/name:pymdownx.superfences.fence_code_format
   - pymdownx.tabbed:
       alternate_style: true
@@ -162,5 +164,5 @@ nav:
     - wiki/data-compression.md
   - Blog:
     - blog/index.md
-  - Allam Labs.:
-    - allamlabs/index.md
+  # - Allam Labs.:
+  #   - allamlabs/index.md
