--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,7 +11,7 @@ repo_url: https://github.com/tallamjr
 docs_dir: "src"
 
 # Copyright
-copyright: Copyright &copy; 2016 - 2024 Tarek Allam
+copyright: Copyright &copy; 2016 - 2025 Tarek Allam
 
 # Configuration
 theme:
@@ -67,7 +67,7 @@ plugins:
   - blog:
       archive_date_format: yyyy
       authors_profiles: true
-      pagination_per_page: 5
+      pagination_per_page: 10
       archive_pagination_per_page: 10
       categories_pagination_per_page: 10
       draft_on_serve: true
@@ -118,10 +118,11 @@ markdown_extensions:
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
       emoji_generator: !!python/name:material.extensions.emoji.to_svg
-  - pymdownx.highlight:
-      use_pygments: true
-      noclasses: true
-      pygments_style: "lightbulb"
+        # - pymdownx.highlight:
+        #     use_pygments: true
+        #     noclasses: true
+        #     pygments_style: "github-dark"
+
   - pymdownx.inlinehilite
   - pymdownx.keys
   - pymdownx.mark
@@ -138,9 +139,6 @@ markdown_extensions:
   - pymdownx.tilde
 
 extra_javascript:
-  # - javascripts/katex.js
-  # - https://unpkg.com/katex@0/dist/katex.min.js
-  # - https://unpkg.com/katex@0/dist/contrib/auto-render.min.js
   - javascripts/mathjax.js
   - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
@@ -159,27 +157,33 @@ nav:
   #   - projects/index.md
   - Wiki:
       - wiki/index.md
-      - Compilers:
-          - wiki/compilers/index.md
-          - wiki/compilers/traditional-compilers.md
-          - wiki/compilers/ai-compilers.md
-      - Embedded Systems:
-          - wiki/embedded-systems/index.md
-          - wiki/embedded-systems/embedded-linux.md
-      - Compression:
-          - wiki/compression/index.md
-          - wiki/compression/lossy/lossy.md
-          - wiki/compression/data-compression.md
-      - Digital Signal Processing:
-          - wiki/digital-signal-processing/index.md
-          - wiki/digital-signal-processing/image.md
-          - wiki/digital-signal-processing/video.md
-      - Event-based Vision:
-          - wiki/eb-vision/index.md
-          - wiki/eb-vision/data-representation.md
-          - wiki/eb-vision/e2v.md
-          - wiki/eb-vision/v2e.md
+      # - Compilers:
+      #     - wiki/compilers/index.md
+      #     - wiki/compilers/traditional-compilers.md
+      #     - wiki/compilers/ai-compilers.md
+      # - Embedded Systems:
+      #     - wiki/embedded-systems/index.md
+      #     - wiki/embedded-systems/embedded-linux.md
+      #     - wiki/embedded-systems/embedded-rust.md
+      # - Compression:
+      #     - wiki/compression/index.md
+      #     - wiki/compression/lossy/lossy.md
+      #     - wiki/compression/data-compression.md
+      # - Digital Signal Processing:
+      #     - wiki/digital-signal-processing/index.md
+      #     - wiki/digital-signal-processing/image.md
+      #     - wiki/digital-signal-processing/video.md
+      # - Event-based Vision:
+      #     - wiki/eb-vision/index.md
+      #     - wiki/eb-vision/data-representation.md
+      #     - wiki/eb-vision/e2v.md
+      #     - wiki/eb-vision/v2e.md
+      # - Data Engineering:
+      #     - wiki/data-engineering/index.md
+      #     - wiki/data-engineering/dataframes.md
+      #     - wiki/data-engineering/query-optimisation.md
+      #     - wiki/data-engineering/pds.md
   - Blog:
       - blog/index.md
-  # - Allam Labs.:
-  #   - allamlabs/index.md
+  # - Contact:
+  #     - allamlabs/index.md
