--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install uv and Python deps
         run: |
+          curl -LsSf https://astral.sh/uv/install.sh | sh
           uv venv --python "3.11"
           source .venv/bin/activate
           uv pip install -r requirements.txt
